contrast issues fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -170,7 +170,7 @@ nav a:hover {
 }
 
 .member-cards #card-header {
-    background-color: rgb(98, 106, 173);
+    background-color: rgb(56, 61, 105);
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     padding: 2%;
